# Amber

./: .gitignore  .gitmodules  .prettierignore  CLAUDE.md  README.md  app.brainylearn.BrainyLearn.metainfo.xml  cargo-sources.json  eslint.config.js  flatpak-builder.yaml  flatpak.metainfo.xml  icon-manifest.json  index.html  node-sources.json  package-lock.json  package.json  shell.nix  skills-lock.json  snapcraft.yaml  tsconfig.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tools.bash
src-tauri/brainy_core/: Cargo.toml  build.rs
src-tauri/brainy_core/db/: 0001_create_tables.sql  0002_create_modified_date_and_deletion_triggers.sql
src-tauri/brainy_core/protobuff/: sync_objects.proto
src-tauri/brainy_core/src/: lib.rs  settings.rs
src-tauri/brainy_core/src/ai_integration/: mod.rs
src-tauri/brainy_core/src/backend/: brainy_backend_http_client.rs  mod.rs  models.rs
src-tauri/brainy_core/src/backup/: backup_service.rs  sqlite_backup_repository.rs
src-tauri/brainy_core/src/cells/: cell_service.rs  mod.rs
src-tauri/brainy_core/src/common/: mod.rs  repository_error.rs  sqlite_repositories_context.rs
src-tauri/brainy_core/src/file_system/: file_system_service.rs  mod.rs
src-tauri/brainy_core/src/fsrs/: fsrs_service.rs  mod.rs
src-tauri/brainy_core/src/sync/: brainy_backend_http_client.rs  mod.rs  models.rs  sync_service.rs
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/injector/: Cargo.toml
src-tauri/injector/src/: injector.rs  injector_scope.rs  lib.rs
src-tauri/injector_derive/: Cargo.toml
src-tauri/injector_derive/src/: lib.rs
src-tauri/migrations/: 0001_create_tables.sql  0002_create_modified_date_and_deletion_triggers.sql  0003_replace_elapsed_days_with_learning_steps.sql  0004_create_incremental_readings_tables.sql
src-tauri/protobuff/: sync_objects.proto
src-tauri/src/: lib.rs  test_utils.rs
src-tauri/src/ai_integration/: ai_api.rs  ai_service.rs  ai_state.rs  mod.rs  prompts.rs  state_cancellation_hook.rs  stream_ai_request.rs
src-tauri/src/ai_integration/clients/: mock_client.rs  mod.rs
src-tauri/src/ai_integration/dto/: mod.rs  stream_ai_request_dto.rs
src-tauri/src/ai_integration/entities/: chat.rs  document.rs  message.rs  mod.rs
src-tauri/src/ai_integration/repositories/: sqlite_ai_repository.rs
src-tauri/src/ai_integration/services/: ai_client_provider.rs  ai_streamer.rs  ai_tool_call_acceptor.rs  cloze_suggester.rs  document_uploader.rs  mod.rs
src-tauri/src/ai_integration/tools/: create_file.rs  create_flash_card.rs  create_folder.rs  mod.rs  search_documents.rs  search_file_system.rs
src-tauri/src/api/: ai_api.rs  auth_api.rs  cell_api.rs  export_import_api.rs  file_system_api.rs  fsrs_api.rs  mod.rs  repetition_api.rs  review_api.rs  search_api.rs  settings_api.rs  sync_api.rs  user_api.rs
src-tauri/src/api/dto/: cell_with_fsrs_profile_id.rs  mod.rs  review_tree_folder.rs  update_cell_request.rs
src-tauri/src/app_info/: app_info_api.rs  mod.rs
src-tauri/src/backend/: auth_service.rs  backend_dto.rs  brainy_backend_http_client.rs  mod.rs
src-tauri/src/backend/api/: auth_api.rs  mod.rs  user_api.rs
src-tauri/src/backend/clients/: brainy_backend_client.rs
src-tauri/src/backend/dto/: mod.rs  sign_up_request.rs  sign_up_request_dto.rs
src-tauri/src/backend/services/: authenticator.rs  mod.rs
src-tauri/src/backend/traits/: brainy_backend_client.rs
src-tauri/src/backup/: backup_service.rs  mod.rs  sqlite_backup_repository.rs
src-tauri/src/backup/services/: backup_service.rs  mod.rs
src-tauri/src/cells/: cell_service.rs  mod.rs  test_utils.rs
src-tauri/src/cells/api/: cell_api.rs  mod.rs  repetition_api.rs  review_api.rs  search_api.rs
src-tauri/src/cells/dto/: cell_with_fsrs_profile_id.rs  cell_with_fsrs_profile_id_dto.rs  create_cell_request_dto.rs  mod.rs  update_cell_request.rs  update_cell_request_dto.rs  update_repetition_request_dto.rs
src-tauri/src/cells/entities/: cell.rs  repetition.rs  review.rs
src-tauri/src/cells/models/: cell_deletion_request.rs  home_statistics.rs  mod.rs
src-tauri/src/cells/repositories/: cell_repository.rs  mod.rs  sqlite_cell_repository.rs  sqlite_review_repository.rs
src-tauri/src/cells/services/: cell_content_updater.rs  cell_creator.rs  cell_deleter.rs  cell_fsrs_provider.rs  cell_invariants_enforcer.rs  cell_mover.rs  mod.rs  review_registrar.rs
src-tauri/src/cells/value_objects/: home_statistics.rs  incremental_reading.rs  mod.rs  repetition_update.rs
src-tauri/src/common/: api_error.rs  constants.rs  mod.rs  repository_error.rs  sqlite_repositories_context.rs  types.rs  unit_of_work_ext.rs
src-tauri/src/common/extensions/: into_base64.rs  into_datetime.rs  into_timestamp.rs
src-tauri/src/common/traits/: mod.rs
src-tauri/src/common/utils/: create_injector.rs  create_sqlite_pool.rs  mod.rs
src-tauri/src/database/: database_connection_manager.rs  mod.rs
src-tauri/src/dto/: file_with_repetitions_count.rs  mod.rs  review_tree_folder.rs  update_settings_request.rs
src-tauri/src/elements/: elements_api.rs  mod.rs
src-tauri/src/elements/dto/: any_element_dto.rs  create_card_dto.rs  create_extract_dto.rs  create_folder_dto.rs  mod.rs  (+13 more)
src-tauri/src/entity/: cell.rs  review.rs
src-tauri/src/file_system/: file_system_service.rs  mod.rs
src-tauri/src/fsrs/: fsrs_api.rs  fsrs_service.rs  mod.rs
src-tauri/src/import/: dto.rs  import_api.rs  mod.rs
src-tauri/src/incremental_reading/: mod.rs
src-tauri/src/infrastructure/: mod.rs  sqlite_database_connection_manager.rs
src-tauri/src/service/: cell_service.rs  export_import_service.rs  file_service.rs  repetition_service.rs  review_service.rs  search_service.rs  settings_service.rs
src-tauri/src/settings/: mod.rs  settings_api.rs  settings_service.rs
src-tauri/src/sources/: mod.rs  sources_api.rs
src-tauri/src/study/: mod.rs  study_api.rs  study_profile_api.rs
src-tauri/src/sync/: mod.rs  sync_api.rs  sync_service.rs
src-tauri/src/util/: database_util.rs
src-tauri/src/value_objects/: mod.rs
(+1089 files in other folders)
