[package]
name = "BrainyLearn"
version = "1.0.0"
description = "Brainy"
authors = ["Rami Alkawadri"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "brainy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "0.14.3"
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
cookie_store = "0.22.1"
injector = { path = "./injector" }
injector_derive = { path="./injector_derive" }
log = "0.4.29"
ammonia = "4"
markdown = "1.0.0"
prost = "0.14.3"
prost-types = "0.14.3"
regex = "1.12.3"
tauri-plugin-http = "2"
reqwest-middleware = { version = "0.4.0", features = ["json"] }
reqwest-retry = "0.8.0"
reqwest_cookie_store = "0.9.0"
rig-core = { version = "0.36.0", features = ["pdf", "derive"] }
rig-sqlite = "0.2.5"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_repr = "0.1.20"
simple_logger = "5.2.0"
sqlite-vec = "0.1.9"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "macros", "sqlite", "chrono", "uuid" ] }
tauri = { version = "2.11.0", features = ["test"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2"
tauri-plugin-process = "2.3.1"
text-splitter = "0.30.1"
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["full"] }
tokio-rusqlite = "0.6.0"
tokio-stream = "0.1.18"
uuid = { version = "1.23.1", features = [ "v4", "serde" ] }

[dev-dependencies]
mockall = "0.14.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.4.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2.4.1"

[target.'cfg(target_os = "android")'.dependencies]
openssl = { version = "*", features = ["vendored"] }

[workspace]
members = [
    "injector",
    "injector_derive"
]
