[package]
name = "brainy_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
log = "0.4.27"
lol_html = "2.6.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "macros", "sqlite", "chrono", "uuid" ] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = [ "v4", "serde" ] }
