[package]
name = "brainy_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
cookie_store = "0.22.0"
dirs = "6.0.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
log = "0.4.27"
lol_html = "2.6.0"
prost = "0.14"
prost-types = "0.14.1"
rand = "0.9.2"
rand_chacha = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json", "cookies"] }
reqwest-middleware = { version = "0.4.2", features = ["json"] }
reqwest-retry = "0.8.0"
reqwest_cookie_store = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_repr = "0.1.20"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "tls-native-tls", "macros", "sqlite", "chrono", "uuid" ] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = [ "v4", "serde" ] }

[build-dependencies]
prost-build = "0.14.1"

[dev-dependencies]
mockall = "0.14.0"

[features]
test-utils = []
